extras/kgateway/argocd-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kgateway-gateway-to-argocd
  namespace: argocd # Namespace of the backend service
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kgateway-system # Namespace of the HTTPRoute
  to:
    - group: ""
      kind: Service # Allow referencing Kubernetes Services
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route-kgateway
spec:
  parentRefs:
    - name: kgateway-gateway
      namespace: kgateway-system
  hostnames:
    - "argocd.192.168.122.200.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd
          namespace: argocd
          port: 80
