extras/kgateway/jaeger-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-kgateway-gateway-to-jaeger
  namespace: jaeger # Namespace of the backend service
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: kgateway-system # Namespace of the HTTPRoute
  to:
    - group: ""
      kind: Service # Allow referencing Kubernetes Services
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-route-kgateway
spec:
  parentRefs:
    - name: kgateway-gateway
      namespace: kgateway-system
  hostnames:
    - "jaeger.192.168.122.200.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger
          namespace: jaeger
          port: 16686
---
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-grpc-route-kgateway
spec:
  parentRefs:
    - name: kgateway-gateway
      namespace: kgateway-system
  hostnames:
    - "jaeger-grpc.192.168.122.200.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger
          namespace: jaeger
          port: 4317
